fixed bugs(1bug remaining
1 bug remainng, when answer chosen, correct answer and if wrong answer shown, it is not centered.

--- a/ELLI/src/app/features/test/test.component.css
+++ b/ELLI/src/app/features/test/test.component.css
@@ -29,7 +29,7 @@
 {
   text-align: center;
   font-size: 40px;
- 
+  min-width: 150px;
 }
 
 ::ng-deep .mat-progress-bar-fill::after {
@@ -43,7 +43,7 @@
 }
 .prog-bar
 {
-  max-width: 2000px;
+  max-width: 2400px;
   min-width: 200px;
 }
 
